0.0.2
	- added InvalidPayload
	- added shortcuts
	- added AES
	- added demo_performance
	- cleaned up demo

0.0.1
	initial release